# vault-ai-backend

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CLAUDE.md  Makefile  PRD.md  README.md  alembic.ini  pyproject.toml  vault-api-spec.md
.claude/plans/: rev1-implementation.md  rev2-frontend-api-support.md
.github/workflows/: deploy-cloudrun.yml
alembic/: env.py
alembic/versions/: 001_baseline.py  002_add_update_jobs.py  003_add_adapters.py  004_add_eval_jobs.py  005_pg_compat.py  006_add_datasets.py  007_add_uptime_events.py
app/: __main__.py  cli.py  config.py  dependencies.py  main.py
app/core/: access_gate.py  database.py  exceptions.py  middleware.py  migrations.py  security.py
app/schemas/: activity.py  admin.py  audit.py  auth.py  chat.py  completions.py  conversations.py  dataset.py  devmode.py  diagnostics.py  embeddings.py  eval.py  health.py  insights.py  ldap.py  model_management.py  models.py  quarantine.py  services.py  setup.py  system.py  training.py  updates.py  uptime.py
app/services/: admin.py  audit.py  auth.py  conversations.py  devmode.py  devmode_jupyter.py  devmode_pty.py  devmode_python.py  devmode_terminal.py  diagnostics.py  jwt_service.py  ldap_service.py  ldap_sync.py  model_manager.py  monitoring.py  service_manager.py  setup.py  system.py  training.py  uptime.py  uptime_monitor.py
config/: gpu-config.yaml  models.json
docker/: Caddyfile  Dockerfile  Dockerfile.cloudrun  Dockerfile.mock-vllm  docker-compose.yml
docker/postgres/: init-pgvector.sql
docs/: rag-tech-stack-evaluation.md
scripts/: build_update_bundle.py  health_check.sh  migrate_sqlite_to_pg.py
tests/: conftest.py
tests/integration/: test_adapter_endpoint.py  test_admin_endpoint.py  test_ai_safety_endpoint.py  test_audit_endpoint.py  test_auth_endpoint.py  test_chat_endpoint.py  test_completions_endpoint.py  test_conversations_endpoint.py  test_dataset_endpoint.py  test_dataset_integration.py  test_datasource_endpoint.py  test_devmode_endpoint.py  test_devmode_jupyter.py  test_devmode_python.py  test_devmode_terminal.py  test_diagnostics_endpoint.py  test_embeddings_endpoint.py  test_eval_endpoint.py  test_eval_websocket.py  test_health_endpoint.py  test_insights_endpoint.py  test_metrics_endpoint.py  test_model_management_endpoint.py  test_models_endpoint.py  test_quarantine_endpoint.py  test_setup_endpoint.py  (+7 more)
(+130 files in other folders)
